# cc-py-pkg

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.scm_slug}}/: .bumpversion.toml  pyproject.toml  tasks.py
{{cookiecutter.scm_slug}}/src/{{cookiecutter.pkg_slug}}/: cli.py
