[project]
name = "{{cookiecutter.scm_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
{{cookiecutter.scm_slug}} = "{{cookiecutter.pkg_slug}}:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bump-my-version>=0.32.2",
    "invoke>=2.2.0",
    "mypy>=1.15.0",
    "pydocstyle>=6.3.0",
    "pydotenv>=0.0.7",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "twine>=6.1.0",
]

[tool.ruff]
line-length = 110
target-version = "py313"
fix = true  # Automatically fix issues

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable specific rules (E: pycodestyle, F: Pyflakes, I: isort)
